Scrollbar fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -684,6 +684,18 @@
   }
 }
 
+::-webkit-scrollbar {
+    @apply w-2.5 h-2.5;
+   
+}
+
+::-webkit-scrollbar-track {
+    @apply bg-transparent
+}
+ 
+::-webkit-scrollbar-thumb {
+    @apply rounded-full bg-border border border-transparent border-solid bg-clip-padding;
+}
 @layer utilities {
   .no-scrollbar::-webkit-scrollbar {
     display: none;
